[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "instrument-suite"
version = "0.1.0"
description = "Asynchronous instrumentation framework"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "lakeshore",
    "pyvisa",
    "pyvisa-py",
    "pyserial",
]